<resources>
    <string name="app_name">vnpt_tuan1</string>


    // Menu
    <string name="danh_sach">Danh Sách</string>
    <string name="thong_tin">Thông Tin</string>
    <string name="tim_kiem">Tìm Kiếm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_name">Danh \'Sách\'</string>
    <string name="name">Tên</string>
    <string name="holder">TextView</string>
    <string name="publisher">Nhà XB</string>
    <string name="publishdate">Ngày XB</string>
    <string name="price">Giá</string>
    <string name="language">Ngôn ngữ</string>
    <string name="java">Java</string>
    <string name="kotlin">kotlin</string>
    <string name="search_hint">Nhập thông tin sách</string>
    <string name="bonus">bonus</string>
    <string name="grid">GRID</string>
    <string name="autocomplete">AutoComplete</string>
    <string name="autotext">autotext</string>
    <string-array name="nxb">
        <item>Giao duc</item>
        <item>Khoa hoc</item>
        <item>PTIT </item>
    </string-array>
</resources>